# rust_course_final_assessment

./: package-lock.json  package.json
repo1-folder/: package-lock.json
repo1-folder/src/components/: AddProduct.js  AddSale.js  EditSale.js  Login.js  Navbar.js  Products.js  ProtectedRoute.js
repo1-folder/src/context/: AuthContext.js
repo2-folder/: Cargo.toml
repo2-folder/src/: auth.rs  sales.rs
src/: App.js  error.rs  main.rs  product.rs  purchase.rs
src/components/: AddPurchase.js  EditProduct.js  EditPurchase.js  Home.js  Purchases.js  Sales.js
src/styles/: Login.module.css
