[package]
name = "rust-"
version = "0.1.0"
authors = [Me]
edition = "2018"

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
postgres = {version="0.19.8", features = ["with-chrono-0_4"] }
chrono = {version="0.4.38", features=["serde"]}

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
